--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ a
 header
 {
     width: 100%;
+    position: relative;
 }
 .top-box
 {
@@ -27,10 +28,10 @@ header
     align-items: center;
     font-size: 0.75rem;
     font-family: sans-serif;
-    padding-left: 33em;
-    padding-right: 33em;
-    padding-top: 0.5em;
-    padding-bottom: 0.5em;
+    padding-left: 30em;
+    padding-right: 30em;
+    padding-top: 0.7em;
+    padding-bottom: 0.7em;
 }
 .top-box__element span
 {
@@ -48,8 +49,8 @@ header
     align-items: center;
     background-color: hsl(0, 100%, 40%);
     height: 10.2vh;
-    padding-left: 25em;
-    padding-right: 24em;
+    padding-left: 22.6em;
+    padding-right: 22em;
 }
 .title-box .menu-icon
 {
@@ -107,7 +108,7 @@ header
     flex-direction: row nowrap;
     justify-content: space-between;
 }
-.buttonS-box
+.buttons-box
 {
     margin: 0 0.5em;
 }
@@ -124,8 +125,8 @@ header
     font-weight: bold;
     font-family: 'Roboto Condensed';
     margin-top: 0.3em;
-    padding-left: 28em;
-    padding-right: 27em;
+    padding-left: 25em;
+    padding-right: 25em;
 }
 .nav-inline__element
 {
@@ -150,4 +151,58 @@ main
 .newsletter__ads:nth-child(2)
 {
     width: 100%;
+    background-position: cover;
+}
+.nav-list
+{
+    background-color: hsl(210, 11%, 15%);
+    color: hsl(0, 0%, 100%);
+    font-family: 'Roboto Condensed';
+    font-size: 1rem;
+    width: 35.4em;
+    z-index: 2;
+    position: absolute;
+    left: 25em;
+    bottom: 20em;
+    border-bottom: 3px hsl(0, 100%, 40%) solid;
+}
+.nav-list svg:nth-child(1)
+{
+    width: 1.5rem;
+    height: 1.5rem;
+    margin-top: 0.4em;
+}
+.nav-list__option
+{
+    display: flex;
+    flex-direction: row nowrap;
+    justify-content: space-between;
+    padding: 0.5em 1.5em;
+    font-weight: bold;
+    cursor: pointer;
+    border-bottom: 1px hsl(0, 0%, 85%) solid;
+}
+.nav-list__option:nth-child(1)
+{
+    height: 2.1em;
+}
+.nav-list__option .plus-icon
+{
+    font-weight: bold;
+    color:hsl(0, 100%, 40%);
+}
+.nav-list__option:nth-child(1)
+{
+    border: none;
+    background-color: hsl(0, 0%, 20%);
+}
+.nav-list__option input
+{
+    border: none;
+    background-color: hsl(0, 0%, 20%);
+    color:hsl(0, 0%, 100%);
+    font-family: 'Roboto Condensed';
+    height: 2.5em;
+    width: 32em;
+    padding: 0.5em;
 }
