--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,11 @@
     box-sizing: border-box;
     outline: 1px red solid;
 }*/
+
+/*********MASTER**********/
 html
 {
     font-family: sans-serif;
-}
-body
-{
-    color: hsl(210, 11%, 15%);
 }
 a
 {
@@ -20,6 +18,34 @@ header
     width: 100%;
     position: relative;
 }
+main
+{
+    width: 62%;
+    margin: 0.5em auto;
+    z-index: 2;
+    position: relative;
+}
+.courtain
+{
+    display: none;
+}
+.courtain.active
+{
+    display: block;
+    width: 100%;
+    height: 100vh;
+    background-color: #000a;
+    z-index: 3;
+    position: absolute;
+}
+.hover-red:hover
+{
+    transition: 0.2s linear;
+    color: hsl(0, 100%, 40%);
+}
+/*====END====*/
+
+/*********TOP-BOX**********/
 .top-box
 {
     background-color: hsl(0, 0%, 90%);
@@ -43,6 +69,9 @@ header
 {
     font-size: 0.7rem;
 }
+/*====END====*/
+
+/*********TITLE-BOX**********/
 .title-box
 {
     display: flex;
@@ -54,7 +83,6 @@ header
     padding-right: 22em;
     position: relative;
 }
-
 .title-box .menu-icon
 {
     display: flex;
@@ -71,10 +99,11 @@ header
     height: 5px;
     background-color: hsl(0, 0%, 100%);
 }
-.title-box__element > p
+.title-box__element > h1
 {
     font-family: 'Alfa Slab One', cursive;
-    font-size: 3.5rem;
+    font-size: 3rem;
+    font-weight: 300;
     color:hsl(0, 0%, 100%);
 }
 .button
@@ -115,6 +144,9 @@ header
 {
     margin: 0 0.5em;
 }
+/*====END====*/
+
+/*********MENU-INLINE**********/
 .nav-inline
 {
     display: flex;
@@ -122,7 +154,7 @@ header
     justify-content: space-between;
     align-items: center;
     background-color:hsl(0, 0%, 90%);
-    border-bottom: 3px hsl(0, 0%, 77%) solid;
+    border-bottom: 3px hsl(0, 0%, 70%) solid;
     height: 4vh;
     font-size: 0.9rem;
     font-weight: bold;
@@ -145,26 +177,9 @@ header
     width: 1.5em;
     height: 1.5em;
 }
-main
-{
-    width: 62%;
-    margin: 0.5em auto;
-    z-index: 2;
-    position: relative;
-}
-.courtain
-{
-    display: none;
-}
-.courtain.active
-{
-    display: block;
-    width: 100%;
-    height: 100vh;
-    background-color: #000a;
-    z-index: 3;
-    position: absolute;
-}
+/*====END====*/
+
+/*********COLLAPSED-MENU**********/
 .nav-list
 {
     display: none;
@@ -270,17 +285,18 @@ main
     color: hsl(0, 0%, 100%);
     font-size: 1rem;
 }
+/*====END====*/
+
+/*********ADS**********/
 .ad-top
 {
     display: flex;
     flex-direction: row nowrap;
     justify-content: center;
 }
-.hover-red:hover
-{
-    transition: 0.2s linear;
-    color: hsl(0, 100%, 40%);
-}
+/*====END====*/
+
+/*********NOTICIAS**********/
 .newsletter
 {
     margin-top: 1em;
@@ -354,6 +370,9 @@ main
     text-align: left;
     font-size: 1.1rem;
 }
+/*====END====*/
+
+/*********MEDIA-RESPONSIVE**********/
 @media screen and (max-width: 1530px)
 {
     .newsletter__ad img
@@ -362,3 +381,4 @@ main
     }
     
 }
+/*====END====*/
