Compresión de sass

--- a/scss/components/_news.scss
+++ b/scss/components/_news.scss
@@ -43,7 +43,7 @@
     }
   
     .description {
-      font-family: $font-sans;
+      font-family: $font-base;
       font-size: 1.2rem;
     }
   }
