JS progress bar

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -8,5 +8,6 @@
 @import "components/news";
 @import "components/title-box";
 @import "components/top-box";
+@import "components/progress-scroll-bar";
 @import "layout/master";
 @import "layout/media";
