--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -2,7 +2,7 @@
 $font-primary: "Roboto", sans-serif;
 $font-primary-condensed: "Roboto Condensed";
 $font-brand: "Alfa Slab One", cursive;
-$font-base: "sans-serif";
+$font-base: "Arial";
 $font-secondary: "Times New Roman";
 
 //colors
