--- a/scss/layout/_master.scss
+++ b/scss/layout/_master.scss
@@ -1,7 +1,15 @@
 
+  *
+  {
+    outline: 1px red solid;
+  }
+  html{
+    font-family: $font-base;
+  }
   header {
     width: 100%;
     position: relative;
+    z-index: 4;
   }
   
   main {
@@ -16,11 +24,14 @@
   
     &.active {
       display: block;
-      width: 100%;
-      height: 100vh;
       background-color: $black;
+      opacity: 0.5;
       z-index: 3;
-      position: absolute;
+      position: fixed;
+      top: 0;
+      bottom: 0;
+      right: 0;
+      left: 0;
     }
   }
   
