Progress-bar Javascript

--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -7,6 +7,7 @@ $font-secondary: "Times New Roman";
 
 //colors
 $color-primary: hsl(0, 100%, 40%);
+$color-primary-darker: hsl(0, 70%, 40%);
 $color-secondary: hsl(47, 100%, 50%);
 
 
