--- a/scss/components/progress-scroll-bar.scss
+++ b/scss/components/progress-scroll-bar.scss
@@ -1,12 +1,12 @@
 .progress-container {
     background-color: hsl(0, 0%, 100%);
-    height: 1vh;
+    height: 0.5vh;
     width: 100%;
     z-index: 1500;
 }
   
 .progress-bar {
-    background-color: red;
-    height: 10px;
+    background-color: $color-primary-darker;
+    height: 0.5vh;
     width: 0%;
 }
